some fixes and added kapa.ai for temporal related questions
Signed-off-by: Keith Tenzer <ktenzer@keiths-mbp.lan>

--- a/templates/create.html
+++ b/templates/create.html
@@ -96,6 +96,7 @@
         <label for="category">Category:</label>
         <select id="category" name="category" onchange="handleCategoryChange(this)">
           <option value="random">Random</option>
+          <option value="temporal">Temporal</option>
           <option value="general">General</option>
           <option value="software_engineering">Software Engineering</option>
           <option value="science">Science</option>
