--- a/templates/end.html
+++ b/templates/end.html
@@ -5,6 +5,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="refresh" content="5">
   <style>
 
     table {
@@ -37,7 +38,7 @@
   {% endfor %}
 </table>
 <div style="text-align: center;">
-  <button onclick="location.href='/'" class="btn btn-dark my-3" type="button">Play Again</button>
+  <button onclick="location.href='/game'" class="btn btn-dark my-3" type="button">Play Again</button>
 </div>
 </body>
 </html>
